fix icon alignments

--- a/app/common/styles/base/buttons.scss
+++ b/app/common/styles/base/buttons.scss
@@ -114,6 +114,6 @@ button, .button, .submit {
     vertical-align: middle;
     display: inline-block;
     left: 11px;
-    top: 0px;
+    top: 5px;
   }
 }
